using UnityEngine;

namespace Common.UI.Display.Window.Panel
{
    /// <summary>
    /// ページのつなぎ役
    /// </summary>
    [RequireComponent(typeof(PagePanelView))]
    public class PagePanelPresenter: DisplayPresenterBase<PagePanelView>
    {
        
    }
}